--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -188,8 +188,8 @@ By contrast, variants that do not pass the 1kGP strict mask are more unevenly di
 \centering
 \begin{tabular}{l  r r r}
                       & {Repeat}  & {Non-Repeat}   & {Total}    \\ \hline
-{SNP}  & 3,369 \luke{(0.53\textperthousand)} & 11,059 (0.56\textperthousand) & 14,428\\  
-{INDEL} & 181 (0.3\textperthousand) & 657 (0.66\textperthousand) & 838\\ \hline
+{SNP}  & 3,369 \textcolor{gray}{0.53\textperthousand} & 11,059 \textcolor{gray}{0.56\textperthousand} & 14,428\\  
+{INDEL} & 181 \textcolor{gray}{0.3\textperthousand} & 657 \textcolor{gray}{0.66\textperthousand} & 838\\ \hline
 {Total} & 3,550 & 11,716 & 15,270\\
 \end{tabular}
 \caption{Number of statistically significant variants  passing the 1000 Genomes Project strict mask per category. 
