--- a/PlottingScripts/MakeFigures.Rmd
+++ b/PlottingScripts/MakeFigures.Rmd
@@ -157,8 +157,8 @@ SFS <-
                  y = JPT_MAF), 
              binwidth = c(1/104, 1/104)) +
   scale_fill_gradient(name = 'log10\ncount',
-                      low = "grey95",
-                      high = "black",
+                      low = "grey98",
+                      high = "grey30",
                       trans = "log",
                       breaks = c(1,100,10000,1000000), 
                       labels = c('0','2','4', '6')) +
@@ -167,10 +167,10 @@ SFS <-
                  y = y, 
                  size = count),
              fill = 'royalblue1',
-             color = 'white',
+             color = 'black',
              shape = 21) + 
   scale_size(breaks = c(1, 10, 100), 
-             range = c(1, 5)) +
+             range = c(1, 6)) +
   labs(x = "Nagahama Frequency",
        y = "1kGP Frequency") +
   scale_x_continuous(limits = c(-0.01,0.5)) +
@@ -335,48 +335,6 @@ Before we can plot this, we must download and parse the data.
 See ProcessPlotData.Rmd for info
 
 ### Quality per population
-```{r,fig.height=10,fig.width=8}
-metaData <- readRDS(paste0(DataPath,
-                           'metaData.rds'))
-
-
-
-metaData$Population_tab <- sub("^","                                       ",
-                           metaData$Population)
-metaData$Population <- factor(metaData$Population_tab, levels = unique(metaData$Population_tab))
-#metaData$Population <- factor(metaData$Population, levels = unique(metaData$Population))
-
-a <- ggplot(metaData %>% arrange(x), 
-            aes(x = sample,
-                y = avg_qual,
-                color = Population,
-                shape = as.factor(Phase))) +
-  geom_point(size=1) +
-  facet_wrap(.~Population,  scales = 'free_x', nrow=1, switch = 'y') + #, space = 'free_x'
-  geom_hline(yintercept = 30, 
-             color = 'grey') +
-  scale_colour_manual(values = MyColour_tab, 
-                      breaks = unique(metaData$Population)) +
-  scale_x_discrete(expand = c(0.5,0.5)) +
-  scale_shape_manual(values = c(1,3),
-                     name = 'Phase') +
-  guides(color = FALSE) +
-  labs(title = "Populations ranked by sequencing date",
-       y = "Average quality of mapped bases") +
-  theme(plot.title = element_text(hjust = 0.5), 
-        legend.position = c(0.9, 0.95),
-        axis.text.x = element_blank(), 
-        axis.title.x = element_blank(),
-        axis.ticks.x = element_blank(),
-        axis.line.x = element_blank(),
-        panel.spacing = unit(0, "lines"),
-        strip.placement = 'inside',
-        strip.background = element_blank())
-
-a
-```
-
-
 ```{r,fig.height=10,fig.width=8}
 metaData <- readRDS(paste0(DataPath,
                            'metaData.rds'))
