--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -88,7 +88,8 @@ Harris and Pritchard further identified distinct mutational spectra across a ran
 In particular, the latter two studies  identified a heterogeneous mutational signature within 1kGP Japanese individuals.
 This heterogeneity is intriguing because differences in germline signatures accumulate over many generations.
 A systematic difference within the Japanese population would suggest sustained environmental or genetic differences across sub-populations within Japan with little to no gene flow.
-We therefore decided to follow up on this observation, by using a newly sequenced dataset of Japanese individuals from Nagahama. 
+\luke{Given this signature had not been reproduced in another dataset}, we \sout{therefore} decided to follow up on this observation, by using a newly sequenced dataset of Japanese individuals from Nagahama.
+\luke{Our initial goal was to explore the population structure that might be responsible for such an intriguing mutational signature.}
 
 While we were unable to reproduce the mutational heterogeneity within the Japanese population, we could trace back the source of the discrepancy to a technical artefact in the 1kGP data.
 In addition to creating biases in mutational signatures, this artefact leads to spurious imputation results which have found their way in a number of recent publications.
@@ -153,11 +154,12 @@ Traditionally, genome wide association studies use genotypes as the independent 
 Here we perform a \luke{genotype conditional association test (GCAT), where} genotypes are now the dependent variable that we attempt to predict using the continuous variable $Q$ as the independent variable \citep{song2015testing}.
 We use logistic regression of the genotypes on $Q$ and identify 587 SNPs with $p < 10^{-8}$ and 1034 SNPs with $ p < 10^{-6}$. 
 While identifying putative low-quality SNPs to exclude, using a higher $p$-value threshold increases the stringency of the filtering (i.e., excluding SNPs with $ p < 10^{-6}$ is more stringent than excluding SNPS with $p < 10^{-8}$). 
-The variants that are associated to $Q$ have a significant enrichment in *AC${\rightarrow}$*CC mutations, GA*${\rightarrow}$GG*, and GC*${\rightarrow}$GG* mutations (Figure \ref{SFS}A).
+The variants that are associated to $Q$ have a significant enrichment in *AC${\rightarrow}$*CC mutations, GA*${\rightarrow}$GG*, and GC*${\rightarrow}$GG* mutations (Figure \ref{SFS}C).
 These three enrichments can be summarized as an excess of G**${\rightarrow}$GG* in individuals with low $Q$.
 \luke{Statistical significance of these enrichment is computed using a chi-squared test as described by Harris 2017 \citep{Harris2017a}. }
 
-Thus, this mutational signal is heavily enriched in $Q$-associated SNPs, but residual signal remains in non-significant SNPs, presumably because many rare alleles found in individuals with low $Q$ remain unidentifiable using association techniques (Figure \ref{MutSpect}). The removal of individuals with $Q$ below 30 successfully removes the *AC${\rightarrow}$*CC signal, however other signals identified by Harris and Pritchard appear unchanged (Figure \ref{MutSpect}).
+Thus, this mutational signal is heavily enriched in $Q$-associated SNPs, but residual signal remains in non-significant SNPs, presumably because many rare alleles found in individuals with low $Q$ remain unidentifiable using association techniques \luke{due to lack of power (Supplementary Figure 000}).
+The removal of individuals with $Q$ below 30 successfully removes the *AC${\rightarrow}$*CC signal, however other signals identified by Harris and Pritchard appear unchanged (Figure \ref{MutSpect}).
 For population genetic analyses sensitive to the accumulation of rare variants, the removal of individuals with low $Q$ appears preferable to filtering specific low-quality SNPs. 
 For other analyses where quality of imputation matters, identifying $Q$-associated variants may be preferable. 
 
@@ -212,6 +214,8 @@ We did a similar analysis using all variants identified in the GCAT model (rathe
 Of the 15,270 $Q$-associated variants identified globally, 6,307 are polymorphic in the 1kGP for the 83 resequenced individuals  (See Figure \ref{90HanSFS_full}).
 From this subset, only 1,139 (or 18\%) are present in the resequenced data.
 The allele frequencies of these variants are nearly identical between datasets suggesting that among these 83 individuals, these variants are properly genotyped in the 1kGP.
+\luke{In the GCAT test, a variant may be significantly associated to $Q$ in some populations, but not necessarily all populations. 
+Thus, the 1,139 variants present in the resequenced Han might have stronger associations to $Q$ in in individuals from other populations.}
 There are 5 \luke{variants} that show differing frequencies between both datasets that are likely explained by biased genotypes.
 The vast majority of polymorphisms associated with $Q$ are not present at all in the resequencing dataset, supporting sequencing rather than cell line artifacts.
 
@@ -226,9 +230,13 @@ From the perspective of researchers, they act as black-box imputation machines t
 To investigate whether suspicious calls from the 1kGP are imputed into genotyping studies, we submitted genotype data for the first two chromosomes of the 1kGP genotype data to the Michigan Imputation Server.
 We found that all of the variants associated with $Q$ were imputed back in the samples.
 This suggests that the imputation reference panel still includes individuals with low $Q$, and the dubious variants will be imputed in individuals who most closely match the low-quality individual.
+\luke{These  $Q$-associated variants could also compromise the imputation of real variants that happen to be  close by, causing not only improper imputation, but also false negatives for real variants.}
 
-We searched the literature for any GWAS that might have reported these dubious variants as being significantly associated with some biological trait, even though there is no particular reason for these variants to be associated with phenotypes.
+We searched the literature for any GWAS that might have reported these $Q$-associated variants as being significantly associated with some biological trait, even though there is no particular reason for these variants to be associated with phenotypes.
 The NHGRI-EBI Catalog of published genome-wide association studies identified seventeen recent publications that had reported these variants as close to or above the genome-wide significant threshold (Table \ref{gwasTable}).
+\luke{Some of these publications noted that these variants were not flanked by linkage disequilibrium peaks \citep{Mandage2017}.
+Indeed, we expect a large number of these variants to be filtered out by some quality controls like the Hardy-Weinberg  equilibrium test.
+However, the fact that some of these variants are not removed and that the great majority of these variants are missing from higher quality datasets means that these $Q$-associated variants should be flagged for removal to avoid spurious association.}
 
 Eleven of these studies included the 1kGP in their reference panel for imputation \citep{xu2012genome, lutz2015genome, park2015mercapturic, astle2016allelic, herold2016family,  suhre2017connecting, lopez2017genome, tian2017genome,  spracklen2017association,  nagy2017exploration, gao2018genome} and another used the 1kGP sequence data and cell lines directly \citep{Mandage2017}.
 One study used an in-house reference panel for imputation \citep{nishida2018key}, two studies genotyped individuals and imputed the data using the HapMap II as a reference  database for imputation \citep{Kraja2011, Ebejer2013} and two studies used genotyping chip data \citep{yucesoy2015genome, ellinghaus2016analysis}. 
@@ -237,13 +245,17 @@ These articles used a variety of strict quality filters, including Hardy-Weinber
 They also removed rare alleles and alleles with high degrees of missingness.
 Despite using state-of-the-art quality controls, these variants managed not only to be imputed onto real genotype data, but they also reached genome wide significance for association with biological traits.
 
-These associations are not necessarily incorrect -- a weak but significant bias in imputation may still result in a correct associations. 
+These associations are not necessarily incorrect -- a weak but significant bias in imputation may still result in a correct associations.
 To distinguish between variants with weak but significant association with $Q$ from variants with strong biases, we distinguished between variants where the allele frequency difference between individuals with low- and high-$Q$ is larger than a factor of two (which naturally separates two clusters of variants on Figure \ref{90HanSFS_full}).
 The majority (92.7\%) of the $Q$-associated variants are strongly biased in that they are more than twice as frequent in individuals with low-$Q$ compared to high-$Q$ data.
 By contrast, most $Q$-associated variants reported in the GWAS catalogue had weak bias (See Figure \ref{Pub_30}), with three exceptions.
 One study reports associations with seven $Q$-associated variants that we find to be highly biased \citep{Mandage2017}. 
-That study considered copy number of Epstein-Barr virus sequence in the 1kGP as a phenotype. 
+That study considered copy number of Epstein-Barr virus (EBV) sequence in the 1kGP as a phenotype. 
+\luke{It is unlikely that EBV copy number associations to these seven $Q$-associated variants could be explained by population structure as the data quality of an individual is also correlated with sequencing date.
+This suggests that there may be issues with how EBV is mapped to the genomes of individuals with low quality sequence data.}
 Thus the phenotype in that study is likely confounded by the same technical artefacts that lead to biased SNP calling.
+
+
 
 \begin{table}[h!]
 \begin{tabular}{l l l r r r}
